1.2.5
- Add a system menu in Control Buttons for the GM : first action is to display the GM Manager

1.2.4
- Two new options to hide FR or EN system compendiums

1.2.3
- Fix bug on archetype, occupation and saves updates
- Update Font : font EBGaramond not available on Google
- Update item creation from the sheet : click to create an item and Shift + click to create a weapon
- New type of usage : per scenario
- Fix macro creation on hotbar : no more duplicate creation, one for system, one for generic
- Fix editor asynchronous enrichment since V10

1.2.2
- Fix bug on archetype, occupation and saves updates

1.2.1
- Fix bug for Token Action HUD

1.2.0
- v10 compatible version
- Use standard ToolTips
- Change the option about Wealth to allow : no, fixed or resource
- Change the order of displaying the character sheet depending of options : first line for resources, second line for combat

1.1.1
- Add button for players in the chat when a roll is asked

1.1.0
- Add to GM Manager the ability to ask for a roll

1.0.1
- Fix english translation
- Remove sheet's opening by default of a dropped item

1.0.0
- Add compendiums' English translation 

0.9.9
- Improve english translation thanks to Limpar

0.9.8
- Fix issue with color of succes/failure

0.9.7
- Add rollWeaponMacro : click for save with automatic choice, SHIFT + Click for material roll
- Add modifier malus depending of target
- Update chat message design for rolls : difficulty displayed and modifier applied on it, dice result is now displayed
- Add notes tab
- Global design improvement for all sheets

0.9.6
- Add customized dices and Dice So Nice configuration

0.9.5
Technical release to move from Gitlab to Github

0.9.4
Technical release

0.9.3
Technical release

0.9.2
- Images change : pause logo and above left menu
- Add a new GM only windows : display ressources summary for each connected player

0.9.1
- Update to V9 version
- Fix drag and drop in hotbar : no more macro's duplication

0.8.9.4