@@ -68,11 +68,20 @@ export class CthackUtils {
 		switch (sockmsg.msg) {
 			case 'msg_use_fortune':
 				return CthackUtils._handleMsgUseFortune(sockmsg.data);
+			case 'msg_ask_roll':
+				return CthackUtils._handleMsgAskRoll(sockmsg.data);
 		}
 	}
 
 	static _handleMsgUseFortune(data) {
 		game.settings.set('cthack', 'FortuneValue', data.value);
+	}
+
+	static _handleMsgAskRoll(data) {
+		const currentUser = game.user._id;
+		if (data.userId == currentUser) {
+			AudioHelper.play({ src: "/systems/cthack/sounds/dice.wav", volume: 0.8, autoplay: true, loop: false }, false);
+		}
 	}
 }
 
