@@ -6,7 +6,7 @@
   "url": "https://github.com/Qaw/cthulhuhack",
   "license": "LICENSE.txt",
   "flags": {},
-  "version": "1.2.4",
+  "version": "1.2.5",
   "compatibility": {
     "minimum": "10",
     "verified": "10.290"
@@ -195,7 +195,7 @@
   "system": [],
   "socket": true,
   "manifest": "https://github.com/Qaw/cthulhuhack/releases/latest/download/system.json",
-  "download": "https://github.com/Qaw/cthulhuhack/releases/download/1.2.4/system.zip",
+  "download": "https://github.com/Qaw/cthulhuhack/releases/download/1.2.5/system.zip",
   "protected": false,
   "gridDistance": 5,
   "gridUnits": "ft",
