@@ -1,5 +1,6 @@
 1.2.5
 - Add a system menu in Control Buttons for the GM : first action is to display the GM Manager
+- GM Manager : add a sound when a single player is notified for a roll
 
 1.2.4
 - Two new options to hide FR or EN system compendiums
